# Pantheios

./: .gitignore  .vimrc  AUTHORS.md  AUTHORS.txt  CHANGES.txt  CMakeLists.txt  FAQ.txt  HISTORY.md  HISTORY.txt  INSTALL.md  INSTALL.txt  KNOWN_ISSUES.md  KNOWN_ISSUES.txt  LICENSE  LICENSE.txt  NEWS.md  NEWS.txt  README.md  README.txt  TODO.md  TODO.txt  build_cmake.sh  build_make.sh  clean_cmake.sh  clean_make.sh  prepare_cmake.sh  remove_cmake_artefacts.sh  run_all_scratch_tests.sh  run_all_unit_tests.sh
examples/: CMakeLists.txt
examples/c/: CMakeLists.txt  pantheios.examples.c.vc6.dsw
examples/c/example.c.101/: CMakeLists.txt  example.c.101.c  implicit_link.cpp
examples/c/example.c.N/: CMakeLists.txt  example.c.N.c  implicit_link.cpp
examples/c/example.c.assert/: CMakeLists.txt  example.c.assert.c  implicit_link.cpp
examples/c/example.c.core.pantheios_logprintf/: CMakeLists.txt  example.c.core.pantheios_logprintf.c  implicit_link.cpp
examples/c/example.c.extended_severity/: CMakeLists.txt  example.c.extended_severity.c  implicit_link.cpp
examples/c/example.c.log_n/: CMakeLists.txt  example.c.log_n.c  implicit_link.cpp
examples/c/util/: CMakeLists.txt  pantheios.examples.c.util.vc6.dsw
examples/cpp/: CMakeLists.txt  pantheios.examples.cpp.vc6.dsw
examples/cpp/backends/: CMakeLists.txt  pantheios.examples.cpp.backends.vc6.dsw
examples/cpp/contract/: CMakeLists.txt  pantheios.examples.cpp.contract.vc6.dsw
examples/cpp/custom/: CMakeLists.txt  pantheios.examples.cpp.custom.vc6.dsw
examples/cpp/format/: CMakeLists.txt  pantheios.examples.cpp.format.vc6.dsw
examples/cpp/frontends/: CMakeLists.txt  pantheios.examples.cpp.frontends.vc6.dsw
examples/cpp/inserters/: CMakeLists.txt  pantheios.examples.cpp.inserters.vc6.dsw
examples/cpp/linking/: CMakeLists.txt  pantheios.examples.cpp.linking.vc6.dsw
examples/cpp/misc/: CMakeLists.txt  pantheios.examples.cpp.misc.vc6.dsw
examples/cpp/tracing/: CMakeLists.txt
examples/cpp/util/: CMakeLists.txt
projects/: CMakeLists.txt
projects/backends/: CMakeLists.txt  pantheios.backends.vc6.dsw
projects/backends/be.COMErrorObject/: CMakeLists.txt
projects/backends/be.N/: CMakeLists.txt
projects/backends/be.WindowsConsole/: CMakeLists.txt
projects/backends/be.WindowsSyslog/: CMakeLists.txt
projects/backends/be.fail/: CMakeLists.txt
projects/backends/be.file/: CMakeLists.txt
projects/backends/be.fprintf/: CMakeLists.txt
projects/backends/be.lrsplit/: CMakeLists.txt
projects/backends/be.null/: CMakeLists.txt
projects/backends/be.speech/: CMakeLists.txt
projects/backends/be.syslog/: CMakeLists.txt
projects/backends/be.test/: CMakeLists.txt
projects/backends/bec.COMErrorObject/: CMakeLists.txt
projects/backends/bec.WindowsConsole/: CMakeLists.txt
projects/backends/bec.WindowsDebugger.WithCallback/: CMakeLists.txt
projects/backends/bec.WindowsSyslog/: CMakeLists.txt
projects/backends/bec.WindowsSyslog.WithCallback/: CMakeLists.txt
projects/backends/bec.fail/: CMakeLists.txt
projects/backends/bec.fail.WithCallback/: CMakeLists.txt
projects/backends/bec.file/: CMakeLists.txt
projects/backends/bec.file.WithCallback/: CMakeLists.txt
projects/backends/bec.fprintf/: CMakeLists.txt
projects/backends/bec.fprintf.WithCallback/: CMakeLists.txt
projects/backends/bec.loader/: CMakeLists.txt
projects/backends/bec.loader.WithCallback/: CMakeLists.txt
projects/backends/bec.null/: CMakeLists.txt
projects/backends/bec.null.WithCallback/: CMakeLists.txt
projects/backends/bec.speech/: CMakeLists.txt
projects/backends/bec.stock/: CMakeLists.txt
projects/backends/bec.stock.WithCallback/: CMakeLists.txt
projects/backends/bec.syslog/: CMakeLists.txt
projects/backends/bec.syslog.WithCallback/: CMakeLists.txt
projects/backends/bec.test/: CMakeLists.txt
projects/backends/bec.test.WithCallback/: CMakeLists.txt
projects/backends/bel.fail/: CMakeLists.txt
projects/backends/bel.file/: CMakeLists.txt
projects/backends/bel.fprintf/: CMakeLists.txt
projects/backends/bel.null/: CMakeLists.txt
projects/backends/bel.syslog/: CMakeLists.txt
projects/backends/bel.test/: CMakeLists.txt
projects/backends/ber.fail/: CMakeLists.txt
projects/backends/ber.file/: CMakeLists.txt
projects/backends/ber.fprintf/: CMakeLists.txt
projects/backends/ber.null/: CMakeLists.txt
projects/backends/ber.syslog/: CMakeLists.txt
projects/backends/ber.test/: CMakeLists.txt
projects/core/: CMakeLists.txt  pantheios.core.vc6.dsw
projects/core/vc10/: pantheios.core.vcxproj  pantheios.core.vcxproj.filters
projects/core/vc6/: pantheios.core.dsp
projects/frontends/: CMakeLists.txt  pantheios.frontends.vc6.dsw
projects/frontends/fe.N/: CMakeLists.txt
projects/frontends/fe.N.WithCallback/: CMakeLists.txt
projects/frontends/fe.WindowsRegistry/: CMakeLists.txt
projects/frontends/fe.WindowsRegistry.WithCallback/: CMakeLists.txt
projects/frontends/fe.all/: CMakeLists.txt
projects/frontends/fe.all.WithCallback/: CMakeLists.txt
projects/frontends/fe.fail/: CMakeLists.txt
projects/frontends/fe.fail.WithCallback/: CMakeLists.txt
projects/frontends/fe.null/: CMakeLists.txt
projects/frontends/fe.null.WithCallback/: CMakeLists.txt
projects/frontends/fe.simple/: CMakeLists.txt
projects/frontends/fe.simple.WithCallback/: CMakeLists.txt
projects/util/: CMakeLists.txt  pantheios.util.vc6.dsw
projects/util/vc10/: pantheios.util.vcxproj  pantheios.util.vcxproj.filters
projects/util/vc6/: pantheios.util.dsp
test/: CMakeLists.txt
test/component/: CMakeLists.txt  pantheios.test.component.vc6.dsw
test/component/test.component.be.file.threading/: CMakeLists.txt  implicit_link.cpp  test.component.be.file.threading.cpp
test/component/test.component.bec.fprintf/: CMakeLists.txt  implicit_link.cpp  test.component.bec.fprintf.cpp
test/component/test.component.details/: CMakeLists.txt  (+1 more)
test/performance/: CMakeLists.txt  pantheios.test.performance.vc6.dsw
test/scratch/: CMakeLists.txt  pantheios.test.scratch.vc6.dsw
test/unit/: CMakeLists.txt  pantheios.test.unit.vc6.dsw
(+980 files in other folders)
