
add_subdirectory(backends)
add_subdirectory(contract)
#[====[
add_subdirectory(custom)
#]====]
add_subdirectory(format)
add_subdirectory(frontends)
add_subdirectory(inserters)
#[====[
add_subdirectory(linking)
#]====]
add_subdirectory(misc)
add_subdirectory(tracing)
add_subdirectory(util)


# ############################## end of file ############################# #

